--- a/yeom.ji/css/app.css
+++ b/yeom.ji/css/app.css
@@ -66,6 +66,11 @@ a {
 }
 
 .hidden { display: none; }
+.overscroll {
+	height: 100%;
+	width: 100%;
+	overflow: auto;
+}
 
 .display-flex { display: flex; }
 .display-block { display: block; }
@@ -213,4 +218,54 @@ a {
 	background-image: url('../img/map.png'); 
 	background-position: center;
 	background-size: cover;
+}
+
+
+
+
+/*MODAL*/
+.modal {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	transition: all 0.3s;
+	z-index: 10;
+	pointer-events: none;
+}
+
+.modal.active {
+	opacity: 1;
+	pointer-events: initial;
+}
+.modal-back {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.6);
+}
+
+.modal-popup {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,calc(-50% + 3em));
+	widows: 80vmin;
+	transition: all 0.3s;
+}
+.modal.active .modal-popup {
+	transform: translate(-50%,-50%);
+}
+.modal-head,
+.modal-foot {
+	background-color: var(--color-neutral-lighter);
+	padding: 0.5em 1em;
+}
+.modal-body {
+	background-color: var(--color-white);
+	padding: 1em;
 }
