--- a/yeom.ji/css/app.css
+++ b/yeom.ji/css/app.css
@@ -9,18 +9,18 @@
 	--font-serif: Georgia, serif;
 
 	--color-neutral-lighter: #eee;
-	--color-neutral-light: #ddd;
+	--color-neutral-light: #d5d5d5;
 	--color-neutral-mediumer: #aaa;
 	--color-neutral-medium: #888;
 	--color-neutral-dark: #444;
 
     --color-main-light: #d5fffe;
-    --color-main-medium: #1acfc8;
-    --color-main-dark: #1e5452;
+    --color-main-medium: #0000FF;
+    --color-main-dark: #10107b;
 
 
 	--color-white: #fff;
-	--color-black: #000;
+	--color-black: #222330;
 
 	--header-height: 3rem;
 }
@@ -28,7 +28,7 @@
 body {
 	margin: 0;
 	font-size: 100%;
-	font-family: var(--font-sans);
+	font-family: 'Roboto', sans-serif;
 }
 
 h1,
@@ -37,7 +37,8 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: var(--font-serif);
+	font-family: 'Chivo', sans-serif;
+	font-weight: bold;
 }
 
 a {
@@ -52,6 +53,7 @@ a {
 .list li {
 	/*margin: 0 0.4em;*/
 	padding: 10px;
+	/*list-style-type: none;*/
 }
 
 
@@ -117,10 +119,12 @@ a {
 	width: 100%;
 	display: inline-block;
 	border-width: 0;
-	background-color: var(--color-neutral-medium);
+	background-color: var(--color-neutral-light);
 	padding: 0.5em 1em;
-	border-radius: 1em;
+	border-radius: 0.2em;
 	font: inherit;
+	color: var(--color-main-medium);
+	font-weight: bold;
 	outline: 0;
 	text-align: center;
 	text-decoration: none;
@@ -176,7 +180,6 @@ a {
 
 
 
-
 /*NAV*/
 .ui-header ul,
 .ui-footer ul {
@@ -202,6 +205,8 @@ a {
 }
 
 
+
+
 /* PAGE SPECIFICS */
 #signin-page [data-role='main'] {
 	display: flex;
@@ -223,6 +228,7 @@ a {
 
 
 
+
 /*MODAL*/
 .modal {
 	position: absolute;
@@ -235,10 +241,9 @@ a {
 	z-index: 10;
 	pointer-events: none;
 }
-
 .modal.active {
 	opacity: 1;
-	pointer-events: initial;
+	/*pointer-events: initial;*/
 }
 .modal-back {
 	position: absolute;
@@ -248,7 +253,15 @@ a {
 	height: 100%;
 	background-color: rgba(0,0,0,0.6);
 }
+.modal.active .modal-back {
+	pointer-events: initial;
+}
 
+
+
+
+
+/*MODAL POPUP*/
 .modal-popup {
 	position: absolute;
 	top: 50%;
@@ -259,6 +272,7 @@ a {
 }
 .modal.active .modal-popup {
 	transform: translate(-50%,-50%);
+	pointer-events:initial;
 }
 .modal-head,
 .modal-foot {
@@ -268,4 +282,112 @@ a {
 .modal-body {
 	background-color: var(--color-white);
 	padding: 1em;
+}
+.modal-head h1 {
+	font-size: 1em;
+	margin: 0;
+}
+
+
+
+
+
+/* MODAL DRAWER */
+.modal-drawer {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	transition: all 0.3s;
+	box-shadow: 0 0 5px rgba(0,0,0,0.15);
+}
+.modal-drawer.left,
+.modal-drawer.right {
+	height: 100%;
+	width: 70vw;
+}
+.modal-drawer.left { left: 0; transform:translateX(-100%); }
+.modal-drawer.right { right: 0; transform:translateX(100%); }
+
+.modal-drawer.top,
+.modal-drawer.bottom {
+	width: 100%;
+	height: 30vh;
+}
+.modal-drawer.top { top: 0; transform:translateY(-100%); }
+.modal-drawer.bottom { bottom: 0; transform:translateY(100%); }
+
+.modal.active .modal-drawer {
+	transform: translate(0);
+	pointer-events: initial;
+}
+
+.modal-drawer .modal-body {
+   flex: 1 1 100%;
+}
+
+
+
+
+
+/* FLOATER */
+.floater { position: absolute; }
+.floater.right { right: 1em; }
+.floater.left { left: 1em; }
+.floater.top { top: 1em; }
+.floater.top-second { top: 5em; }
+.floater.bottom { bottom: 1em; }
+
+
+
+
+
+/* CIRCLE */
+.btn-circle {
+	background-color: var(--color-white);
+	width: 3rem;
+	height: 3rem;
+	line-height: 3rem;
+	text-align: center;
+	font-size: 1.5em;
+	border-radius: 2em;
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.15);
+}
+
+
+/*GOOGLE ICONS*/
+.material-icons {
+	font-family: 'Material Icons';
+	font-weight: normal;
+	font-style: normal;
+	font-size: 24px;  /* Preferred icon size */
+	display: inline-block;
+	line-height: 1;
+	text-transform: none;
+	letter-spacing: normal;
+	word-wrap: normal;
+	white-space: nowrap;
+	direction: ltr;
+}
+.current-location {
+	position: absolute;
+	top: 50%;
+	bottom: 50%;
+	transform: translate(-50%,calc(-50% - 0.5em));
+}
+
+
+
+
+
+/*AVATAR*/
+.profile-user {
+	background-color: black;
+	color: white;
+	text-align: center;
+	padding: 3em 0 1em;
+}
+.profile-avatar {
+/*	margin-top: 3em;
+	margin-bottom: 3em;*/
+	width: 30%;
 }
