--- a/yeom.ji/css/app.css
+++ b/yeom.ji/css/app.css
@@ -153,7 +153,7 @@ a {
 	border-width: 0;
 	background-color: var(--color-white);	
 	padding: 0.7em 1em;
-	border-radius: 0.2em;
+	border-radius: 0.3em;
 	font: inherit;
 	/*font-size: 0.8em;*/
 	outline: 0;
@@ -422,7 +422,7 @@ a {
 	font-family: 'Material Icons';
 	font-weight: normal;
 	font-style: normal;
-	font-size: 24px;  /* Preferred icon size */
+	font-size: 24px;
 	display: inline-block;
 	line-height: 1;
 	text-transform: none;
@@ -441,7 +441,6 @@ a {
 	position: absolute;
 	top: 40%;
 	left: 50%;
-	transform: translate(-50%,calc(-50% - 0.5em));
 	color: var(--color-main-medium);
 }
 .icon-location-2 {
