--- a/yeom.ji/css/app.css
+++ b/yeom.ji/css/app.css
@@ -172,13 +172,23 @@ a {
 	overflow: hidden;
 	position: relative;
 }
-.ui-header, 
-.ui-footer {
+.ui-header {
 	flex: none;
 	height: 3.5em;
 	line-height: 3.5em;
 	border-width: 0;
 	background-color: var(--color-white);
+	box-shadow: 0 0 5px rgba(0,0,0,0.15);
+	position: relative;
+	overflow: hidden;
+}
+.ui-footer {
+	flex: none;
+	height: 3.5em;
+	line-height: 3.5em;
+	border-width: 0;
+	background-color: var(--color-main-medium);
+	color: var(--color-white);
 	box-shadow: 0 0 5px rgba(0,0,0,0.15);
 	position: relative;
 	overflow: hidden;
@@ -407,6 +417,7 @@ a {
 
 /* CIRCLE */
 .btn-circle {
+	display: inline-block;
 	background-color: var(--color-white);
 	width: 3rem;
 	height: 3rem;
@@ -532,12 +543,15 @@ a {
 
 
 /* Profile */
+.animal-profile {
+	padding: 1em;
+}
 .animal-profile-image img {
 	margin: 0;
 	padding: 0;
 	object-fit: cover;
-	width: calc(90vmin - 2em);
-	height: calc(90vmin - 2em);
+	width: calc(50vmin - 2em);
+	height: calc(50vmin - 2em);
 }
 .user-profile-image img {
 	width: calc(50vmin - 2em);
@@ -546,6 +560,21 @@ a {
 	border-radius: 50%;
 	object-fit: cover;
 }
+.profile-containter {
+	/*padding: 4vh 0 4vh;*/
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+}
+.profile-activity {
+	padding: 0 1em;
+	/*margin-bottom: 0.1em;*/
+}
+.profile-activity-date {
+	font-size: 0.8em;
+	color: var(--color-neutral-medium);
+}
+
 
 
 
@@ -578,7 +607,10 @@ a {
 	font-family: 'Chivo', sans-serif;
 	padding-bottom: 0.5em;
 }
-
+.column {
+	column-count: 2;
+	/*padding: 10px;*/
+}
 
 
 #animal-profile-page [data-role='main'] {
