--- a/yeom.ji/css/app.css
+++ b/yeom.ji/css/app.css
@@ -153,6 +153,20 @@ a {
 	/*font-size: 0.8em;*/
 	outline: 0;
 }
+.form-delete {
+	width: 100%;
+	display: inline-block;
+	border-width: 0;
+	background-color: var(--color-white);
+	padding: 0.7em 1em;
+	border-radius: 0.3em;
+	font: inherit;
+	color: var(--color-error);
+	font-weight: bold;
+	outline: 0;
+	text-align: center;
+	text-decoration: none;
+}
 
 
 
