--- a/yeom.ji/css/app.css
+++ b/yeom.ji/css/app.css
@@ -535,6 +535,18 @@ a {
 	border-radius: 2em;
 	box-shadow: 2px 2px 5px rgba(0,0,0,0.15);
 }
+.btn-delete {
+	display: inline-block;
+	background-color: var(--color-error);
+	color: var(--color-white);
+	width: 3rem;
+	height: 3rem;
+	line-height: 3rem;
+	text-align: center;
+	font-size: 1.5em;
+	border-radius: 2em;
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.15);
+}
 .btn-back {
 	color: var(--color-white);
 	font-size: 0.8em;
